# prometheus-manager

./: Cargo.toml  README.md
.github/workflows/: test-and-release.yml
artifacts/: avalanchego.metrics  avalanchego.rules.all.yaml  avalanchego.rules.yaml  avalanchego.v1.7.17.metrics  regexes.yaml
scripts/: tests.lint.sh  tests.unit.sh
src/: lib.rs
