[package]
name = "prometheus-manager"
version = "0.0.30" # https://crates.io/crates/prometheus-manager
edition = "2021"
rust-version = "1.69"
publish = true
description = "Rust prometheus manager (parse)"
repository = "https://github.com/gyuho/prometheus-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
chrono = "0.4.24"
human-readable = "0.0.1"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.8.2" # https://github.com/rust-lang/regex
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21" # https://github.com/dtolnay/serde-yaml/releases

[dev-dependencies]
env_logger = "0.10.0"
rust-embed = "8.0.0"
